--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -162,14 +162,13 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 nobase_include_HEADERS = \
-faxpp/char_classes.h \
 faxpp/error.h \
 faxpp/event.h \
+faxpp/parser.h \
+faxpp/text.h \
 faxpp/token.h \
-faxpp/buffer.h \
-faxpp/transcode.h \
-faxpp/xml_parser.h \
-faxpp/xml_tokenizer.h
+faxpp/tokenizer.h \
+faxpp/transcode.h
 
 all: all-am
 
@@ -183,9 +182,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  include/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  include/Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  include/Makefile
+	  $(AUTOMAKE) --foreign  include/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -399,6 +398,13 @@ uninstall-am: uninstall-info-am uninstall-nobase_includeHEADERS
 	tags uninstall uninstall-am uninstall-info-am \
 	uninstall-nobase_includeHEADERS
 
+
+docs: $(top_srcdir)/docs/.api-timestamp
+
+$(top_srcdir)/docs/.api-timestamp: $(nobase_include_HEADERS) $(top_srcdir)/docs/Doxyfile.api
+	cd $(top_srcdir)/docs && \
+		doxygen Doxyfile.api && \
+		touch .api-timestamp
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
