Finished the API documentation.
Implemented FAXPP_tokenizer_release_buffer() which allows a user to
stream input to the tokenizer in the same way the the parser does.

Used the tokenizer streaming API in the tokenizer_example instead of
using mmap.

--- a/Makefile.am
+++ b/Makefile.am
@@ -41,6 +41,7 @@ parser_example_LDADD = libfaxpp.la
 
 EXTRA_DIST = \
 docs/Doxyfile.api \
+docs/header.html \
 docs/api \
 LICENSE
 
@@ -48,5 +49,3 @@ LICENSE
 
 docs:
 	$(MAKE) -C include docs
-
-$(top_srcdir)/docs/api: docs
