--- a/configure.in
+++ b/configure.in
@@ -50,7 +50,7 @@ AC_PROG_RANLIB
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/time.h unistd.h])
+AC_CHECK_HEADERS([stdint.h stdlib.h string.h sys/time.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -61,7 +61,6 @@ AC_TYPE_UINT8_T
 
 # Checks for library functions.
 AC_FUNC_MALLOC
-AC_FUNC_MMAP
 AC_FUNC_REALLOC
 AC_CHECK_FUNCS([gettimeofday memmove memset strerror])
 
