--- a/configure.in
+++ b/configure.in
@@ -54,6 +54,7 @@ AC_CHECK_HEADERS([stdint.h stdlib.h string.h sys/time.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
+AC_C_BIGENDIAN
 AC_HEADER_TIME
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
