--- a/configure.in
+++ b/configure.in
@@ -62,6 +62,7 @@ AC_TYPE_UINT8_T
 
 # Checks for library functions.
 AC_FUNC_MALLOC
+AC_FUNC_MEMCMP
 AC_FUNC_REALLOC
 AC_CHECK_FUNCS([gettimeofday memmove memset strerror])
 
