Branch for a failed optimisation test of putting every state into the same method inside a switch.

--- a/configure.in
+++ b/configure.in
@@ -23,12 +23,12 @@ AC_ARG_ENABLE(profile,
 AC_MSG_RESULT($sp_profile)
 
 if test "$sp_profile" = "yes"; then
-        CFLAGS="$CFLAGS -g -pg -DDEBUG -Wall -Werror"
-        CXXFLAGS="$CXXFLAGS -g -pg -DDEBUG -Wall -Werror"
+        CFLAGS="$CFLAGS -g -pg -DDEBUG -Wall"
+        CXXFLAGS="$CXXFLAGS -g -pg -DDEBUG -Wall"
 else
 if test "$sp_debug" = "yes"; then
-        CFLAGS="$CFLAGS -g -DDEBUG -Wall -Werror"
-        CXXFLAGS="$CXXFLAGS -g -DDEBUG -Wall -Werror"
+        CFLAGS="$CFLAGS -g -DDEBUG -Wall"
+        CXXFLAGS="$CXXFLAGS -g -DDEBUG -Wall"
 else
         CFLAGS="$CFLAGS -O2 -Wall"
         CXXFLAGS="$CXXFLAGS -O2 -Wall"
