Started to implement tokenizing of doctype declarations.

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,7 +31,8 @@ src/xmldecl.c \
 src/xml_parser.c \
 src/xml_parser.h \
 src/xml_tokenizer.c \
-src/xml_tokenizer.h
+src/xml_tokenizer.h \
+src/doctype.c
 
 tokenizer_example_SOURCES = examples/tokenizer_example.c
 tokenizer_example_LDADD = libfaxpp.la
