--- a/Makefile.in
+++ b/Makefile.in
@@ -64,7 +64,7 @@ am_libfaxpp_la_OBJECTS = buffer.lo cdata.lo char_classes.lo comment.lo \
 	element.lo error.lo event.lo pi.lo reference.lo token.lo \
 	tokenizer_states.lo transcode.lo xmldecl.lo xml_parser.lo \
 	xml_tokenizer.lo doctype.lo elementdecl.lo attlistdecl.lo \
-	notationdecl.lo entitydecl.lo
+	notationdecl.lo entitydecl.lo conditional.lo
 libfaxpp_la_OBJECTS = $(am_libfaxpp_la_OBJECTS)
 libfaxpp_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
@@ -259,7 +259,8 @@ src/doctype.c \
 src/elementdecl.c \
 src/attlistdecl.c \
 src/notationdecl.c \
-src/entitydecl.c
+src/entitydecl.c \
+src/conditional.c
 
 tokenizer_example_LDADD = libfaxpp.la
 tokenizer_example_SOURCES = examples/tokenizer_example.c
@@ -394,6 +395,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cdata.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/char_classes.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comment.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/conditional.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/doctype.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/element.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/elementdecl.Plo@am__quote@
@@ -575,6 +577,13 @@ entitydecl.lo: src/entitydecl.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/entitydecl.c' object='entitydecl.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o entitydecl.lo `test -f 'src/entitydecl.c' || echo '$(srcdir)/'`src/entitydecl.c
+
+conditional.lo: src/conditional.c
+@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT conditional.lo -MD -MP -MF $(DEPDIR)/conditional.Tpo -c -o conditional.lo `test -f 'src/conditional.c' || echo '$(srcdir)/'`src/conditional.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/conditional.Tpo $(DEPDIR)/conditional.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/conditional.c' object='conditional.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o conditional.lo `test -f 'src/conditional.c' || echo '$(srcdir)/'`src/conditional.c
 
 parser_example.o: examples/parser_example.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT parser_example.o -MD -MP -MF $(DEPDIR)/parser_example.Tpo -c -o parser_example.o `test -f 'examples/parser_example.c' || echo '$(srcdir)/'`examples/parser_example.c
